codex-rs/tui/src/snapshots/codex_tui__update_prompt__tests__update_prompt_modal_npm.snap
---
source: tui/src/update_prompt.rs
expression: terminal.backend()
---
  ✨ Update available! 0.1.5 -> 9.9.9

  Update source: https://github.com/rachidlaad/uxarion-security

› 1. Update now (runs `npm install -g uxarion@latest`)                          
  2. Skip
  3. Skip until next version

  Press enter to continue
